[package]
name = "airwar"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bevy = { version = "0.12", features = ["dynamic_linking", "default_font"] }
bevy-inspector-egui = "0.22.0"
rand = "0.8.5"

[dependencies]
bevy = { version = "0.12", features = ["default_font"] }
bevy-inspector-egui = "0.22.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1
lto = false
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
